@@ -4066,7 +4066,7 @@ set_RS()
 	if (RS->stlen == 0) {
 		RS_is_null = true;
 		matchrec = rsnullscan;
-	} else if (RS->stlen > 1 && ! do_traditional) {
+	} else if ((RS->stlen > 1 || (RS->flags & REGEX) != 0) && ! do_traditional) {
 		static bool warned = false;
 
 		RS_re[0] = make_regexp(RS->stptr, RS->stlen, false, true, true);
