@@ -1,0 +1,2 @@
+BEGIN { FS = @/./ }
+{ print typeof(FS), $1, NF }
