@@ -1,0 +1,2 @@
+BEGIN { RS = @/./ }
+{ printf("<%s> <<%s>>\n", $0, RT) }
