@@ -1,3 +1,10 @@
+2019-10-13         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DISTS): New tests, typedregex5 and
+	typedregex6.
+	* typedregex5.awk, typedregex5.ok, typedregex6.in,
+	typedregex5.in, typedregex6.awk, typedregex6.ok: New files.
+
 2019-09-24         Jürgen Kahrs Google   <juergen.kahrs@googlemail.com>
 
 	* Makefile.am (EXTRA_DISTS): New test, mpfranswer42.
